syntax = "proto3";
package denischerkasskikh.insurance.insurance;

import "gogoproto/gogo.proto";
import "insurance/params.proto";
// this line is used by starport scaffolding # genesis/proto/import

option go_package = "github.com/DenisCherkasskikh/insurance/x/insurance/types";

// GenesisState defines the insurance module's genesis state.
message GenesisState {
  Params params = 1 [(gogoproto.nullable) = false];
  // this line is used by starport scaffolding # genesis/proto/state
}
