syntax = "proto3";
package denischerkasskikh.insurance.insurance;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "insurance/params.proto";
import "insurance/next_rec.proto";
import "insurance/crash_rec.proto";
// this line is used by starport scaffolding # 1

option go_package = "github.com/DenisCherkasskikh/insurance/x/insurance/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/DenisCherkasskikh/insurance/insurance/params";
  }
  // Queries a NextRec by index.
	rpc NextRec(QueryGetNextRecRequest) returns (QueryGetNextRecResponse) {
		option (google.api.http).get = "/DenisCherkasskikh/insurance/insurance/next_rec";
	}
// Queries a CrashRec by index.
	rpc CrashRec(QueryGetCrashRecRequest) returns (QueryGetCrashRecResponse) {
		option (google.api.http).get = "/DenisCherkasskikh/insurance/insurance/crash_rec/{index}";
	}

	// Queries a list of CrashRec items.
	rpc CrashRecAll(QueryAllCrashRecRequest) returns (QueryAllCrashRecResponse) {
		option (google.api.http).get = "/DenisCherkasskikh/insurance/insurance/crash_rec";
	}

// this line is used by starport scaffolding # 2
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

message QueryGetNextRecRequest {}

message QueryGetNextRecResponse {
	NextRec NextRec = 1 [(gogoproto.nullable) = false];
}
message QueryGetCrashRecRequest {
	  string index = 1;

}

message QueryGetCrashRecResponse {
	CrashRec crashRec = 1 [(gogoproto.nullable) = false];
}

message QueryAllCrashRecRequest {
	cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllCrashRecResponse {
	repeated CrashRec crashRec = 1 [(gogoproto.nullable) = false];
	cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

// this line is used by starport scaffolding # 3
